--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ LIST_END_TEMPLATE=
 
 # Number of seconds to sleep after each edit request
 THROTTLE=1
+
+# Name of the bot account, dedaults to 'WikiversityListBot' if left blank
+BOT_NAME=
