refactor: Allow to set log level

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,15 @@ API_ENDPOINT=https://en.wikiversity.org/w/api.php
 SPARQL_ENDPOINT=https://query.wikidata.org/sparql
 
 # Pages transcluding this template are populated with articles of that volume and issue
-ARTICLE_VOLUME_LIST_TEMPLATE=
+ARTICLE_VOLUME_LIST_TEMPLATE=WikiJournalBotList
 #UPCOMING_ARTICLE_LIST_TEMPLATE=
 # Template that denotes the end of the list
-LIST_END_TEMPLATE=
+LIST_END_TEMPLATE=ListEnd
 
 # Number of seconds to sleep after each edit request
 THROTTLE=1
 
 # Name of the bot account, dedaults to 'WikiversityListBot' if left blank
 BOT_NAME=
+
+LOG_LEVEL=info
