--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ LIST_END_TEMPLATE=ListEnd
 # Number of seconds to sleep after each edit request
 THROTTLE=1
 
-# Name of the bot account, dedaults to 'WikiversityListBot' if left blank
+# Name of the bot account, defaults to 'WikiJournalBot' if left blank
 BOT_NAME=
 
 LOG_LEVEL=info
