refactor: Add stdout logger and update comments

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
+# OAuth consumer only tokens
 CONSUMER_TOKEN=
 CONSUMER_SECRET=
 ACCESS_TOKEN=
 ACCESS_SECRET=
 
+# Full url to the wiki's api.php
 API_ENDPOINT=https://en.wikiversity.org/w/api.php
+
+# WikiData SPARQL endpoint
 SPARQL_ENDPOINT=https://query.wikidata.org/sparql
 
-# Pages transcluding this template are populated with articles of that volume and issue
+# Pages transcluding this template are populated with articles of that journal, volume and issue
 ARTICLE_VOLUME_LIST_TEMPLATE=WikiJournalBotList
 #UPCOMING_ARTICLE_LIST_TEMPLATE=
 # Template that denotes the end of the list
@@ -18,4 +22,5 @@ THROTTLE=1
 # Name of the bot account, defaults to 'WikiJournalBot' if left blank
 BOT_NAME=
 
+# One of debug, info, error
 LOG_LEVEL=info
