refactor: Allow setting a default row_template

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ ARTICLE_VOLUME_LIST_TEMPLATE=WikiJournalBotList
 # Template that denotes the end of the list
 LIST_END_TEMPLATE=ListEnd
 
+# Template that is used when 'row_template' is not set
+DEFAULT_ROW_TEMPLATE="Article volume summary"
+
 # Number of seconds to sleep after each edit request
 THROTTLE=1
 
