--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": ">=7.2",
     "guzzlehttp/guzzle": "^7.4",
     "mediawiki/oauthclient": "^1.2",
     "vlucas/phpdotenv": "^5.4",
-    "monolog/monolog": "^2.3"
+    "monolog/monolog": "^2.3",
+    "ext-json": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
