--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ ARTICLE_VOLUME_LIST_TEMPLATE=WikiJournalBotList
 LIST_END_TEMPLATE=ListEnd
 
 # Template that is used when 'row_template' is not set
-DEFAULT_ROW_TEMPLATE="Article volume summary"
+DEFAULT_ROW_TEMPLATE="Article info"
 
 # Number of seconds to sleep after each edit request
 THROTTLE=1
